--- a/src/styles/invoice.scss
+++ b/src/styles/invoice.scss
@@ -67,6 +67,15 @@
         }
     }
 
+    textarea[type="text"] {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        background-color: #f7f7fc;
+        border: 1px solid #dbd7f4;
+        border-radius: 6px;
+    }
+
     input[type="date"] {
         width: 100%;
         padding: 12px 20px;
@@ -269,6 +278,17 @@ tbody {
         letter-spacing: 0em;
         color: transparent;
         background-color: transparent;
+    }
+
+    .btn-invoice {
+        background: linear-gradient(0deg, #3d89f8, #3d89f8);
+        color: white;
+        border: 1px solid #3d89f8;
+        border-radius: 8px;
+        text-transform: capitalize;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
     }
 }
 
