--- a/src/styles/shipping.scss
+++ b/src/styles/shipping.scss
@@ -64,7 +64,6 @@
     }
 
     .package-detail {
-        margin-top: 30px !important;
         input[type="number"]::placeholder {
             text-align: right;
             font-family: "Roboto", sans-serif;
@@ -80,7 +79,6 @@
         color: white;
         border: 1px solid #3d89f8;
         border-radius: 8px;
-        margin-top: -80px;
         text-transform: capitalize;
         font-style: normal;
         font-weight: 500;
@@ -93,3 +91,9 @@
 .output-print {
     display: none;
 }
+
+// @media screen and (max-width: 599px) {
+//     .pack-resi {
+//         margin-top: 60px !important;
+//     }
+// }
