--- a/src/styles/sku.scss
+++ b/src/styles/sku.scss
@@ -41,10 +41,6 @@
             width: 56px;
             border-radius: 8px;
         }
-        .fa-trash {
-            margin-left: 20px;
-            font-size: 20px;
-        }
     }
 }
 #table-output {
@@ -63,4 +59,10 @@
     font-weight: 500;
     float: right;
     font-size: 16px;
+}
+
+.data-tabel {
+    .trash {
+        float: left;
+    }
 }
